2004-06-09  n1xt3r  <n1xt3r@bluefalcon>

	* nb, plugins/archive/master_index.sh, plugins/articles.off, plugins/atom.sh, plugins/rss.sh:
	- Added new NB_TEMPLATE_DIR, replaces references to BLOG_DIR/TEMPLATE_DIR.
	- Added new BLOG_TEMPLATE_DIR, for use in blog.conf.
	- Added new USR_TEMPLATE_DIR, set with --templatedir option.
	- Added new --templatedir option, to specify blog's template directory.
	- (show_help): List --templatedir and info.

2004-06-08  n1xt3r  <n1xt3r@bluefalcon>

	* default/blog.conf, ChangeLog:
	Fixed BLOG_URL_MAIN: replaced index.$NB_FILETYPE with index.html, becuase NB_FILETYPE wasn't set yet.

	* ChangeLog, docs/nanoblogger.html:
	Updated "Installation" section of manual.

	* ChangeLog, nb: - (load_config): USR_DATADIR overrides NB_DATA_DIR.
	- Added new --datadir option that specifies different data directory to use.

	* plugins/archive/monthly/monthly-cal.sh, plugins/entry/entry_catlinks.sh, plugins/archive/master_index.sh, plugins/blog_links.sh, plugins/blog_status.sh, plugins/calendar.sh, plugins/list_entries.sh, plugins/rss.sh, default/templates/entry_links.htm, default/templates/month_links.htm, plugins/atom.sh, nb, ChangeLog:
	- New variable NB_DATA_DIR, provides a more flexible data path.
	- Set NB_DATA_DIR to BLOG_DIR/ARCHIVES by default.
	- FILE_BY_DIR replaced by MONTHLY_DIR.
	- Set MONTHLY_DIR to ARCHIVES/monthly.
	- Updated plugins and templates to work with the new variables.

2004-06-07  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, docs/nanoblogger.html:
	Updated "Settings and Configuration" and "Credits" sections of manual.
